src/global.css
/**
 * Tailwind CSS imports
 * View the full documentation at https://tailwindcss.com
 */
@tailwind base;
@tailwind components;
@tailwind utilities;

/**
 * WHAT IS THIS FILE?
 *
 * Globally applied styles. No matter which components are in the page or matching route,
 * the styles in here will be applied to the Document, without any sort of CSS scoping.
 *
 */

:root {
  --primary: #17171f;
  --secondary: #3f3f59;
  --navbar-width: 200px;
  --audio-sidebar-width: 200px;
  --body-bg: rgba(23, 23, 31, 0.85);
  --body-bg-solid: rgb(23, 23, 31);
  --modal-background: rgba(0, 0, 0, 0.5);
}

html {
  width: 100%;
  backdrop-filter: blur(10px);
  height: 100%;
  overflow: hidden;
  line-height: 1;
  -webkit-text-size-adjust: 100%;
  -moz-tab-size: 4;
  -o-tab-size: 4;
  tab-size: 4;
  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
    'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
}
body {
  background: var(--body-bg);
  color: #ffffff;
  width: 100%;
  height: 100%;
  overflow: hidden;
  /* overflow-x: hidden; */
  display: flex;
  position: relative;
  overscroll-behavior-y: none;
  -webkit-overflow-scrolling: touch;
}

/* Overlaying Scrollbar */
/* Firefox */
* {
  scrollbar-width: thin;
  scrollbar-color: var(--secondary) var(--primary);
}

/* Chrome, Edge, and Safari */
*::-webkit-scrollbar {
  width: 15px;
}

*::-webkit-scrollbar-track {
  background: var(--primary);
  border-radius: 5px;
}

*::-webkit-scrollbar-thumb {
  background-color: var(--secondary);
  border-radius: 14px;
  border: 3px solid var(--primary);
}

/*

 Song Control Range

*/
.song-control__range input {
  width: 100%;
  -webkit-appearance: none;
  background: transparent;
}

.song-control__range input:focus {
  outline: none;
}

.song-control__range input::-webkit-slider-thumb {
  -webkit-appearance: none;
  height: 16px;
  width: 16px;
  border-radius: 50%;
}

.song-control__range input::-moz-range-thumb {
  -webkit-appearance: none;
  background: transparent;
  border: none;
}

.time-control p {
  padding: 1rem;
}

.sound-wave {
  width: 20px;
  height: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.sound-wave .bar {
  display: block;
  width: 2px;
  margin-right: 1px;
  height: 10px;
  background: #7c93bf;
  animation: sound 0ms -800ms linear infinite alternate;
  transition: height 0.8s;
}

@keyframes sound {
  0% {
    opacity: 0.35;
    height: 6px;
  }
  100% {
    opacity: 1;
    height: 20px;
  }
}

@keyframes sound2 {
  0% {
    opacity: 0.35;
    height: 6px;
  }
  100% {
    opacity: 1;
    height: 18px;
  }
}
.bar:nth-child(1) {
  height: 2px;
  animation-duration: 474ms;
}

.bar:nth-child(2) {
  height: 10px;
  animation-duration: 433ms;
}

.bar:nth-child(3) {
  height: 18px;
  animation-duration: 407ms;
}

.bar:nth-child(4) {
  height: 26px;
  animation-duration: 458ms;
}

.bar:nth-child(5) {
  height: 30px;
  animation-duration: 400ms;
}

